UAT_Backup_All_8Jan2024_0624/Backup-Source/objects/Phoenix_Bid_Line_Item_Price_History__c.object
<CustomObject>
    <fields>
        <fullName>Created_Date__c</fullName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Pheonix_DRL_Units__c</fullName>
        <label>DRL Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_Bid_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bid Line Item</label>
        <referenceTo>Phoenix_Bid_Line_Item__c</referenceTo>
        <relationshipLabel>Bid Line Item Price History</relationshipLabel>
        <relationshipName>Bid_Line_Item_Price_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_Brand_Retail_Price__c</fullName>
        <label>Brand Retail Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Current_52wk__c</fullName>
        <label>Current 52wk</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_Current_Monthly__c</fullName>
        <label>Current Monthly</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_Current_Sell_Price__c</fullName>
        <label>Current Sell Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Customer_Approval__c</fullName>
        <label>Customer Approval</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Not Approved</fullName>
                </value>
                <value>
                    <fullName>Sent Back to Marketing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Customer_Approver__c</fullName>
        <label>Customer Approver</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Customer_Comments__c</fullName>
        <label>Customer Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Phoenix_Customer_Decline_Reasons__c</fullName>
        <label>Customer Decline Reasons</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Damages_Dollor__c</fullName>
        <label>Damages $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Damages__c</fullName>
        <label>Damages %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_Direct_CD_Dollor__c</fullName>
        <label>Phoenix_Direct_CD_Dollor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Direct_CD_Percent__c</fullName>
        <label>Direct CD %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_Final_DRL_Units__c</fullName>
        <label>Final DRL Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_Gross_Sales__c</fullName>
        <label>Gross Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Marketing_Approval_Compld_Time__c</fullName>
        <label>Marketing Approval Completed Time</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Marketing_Approval_Sent_Time__c</fullName>
        <label>Marketing Approval Sent Time</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Marketing_Approval__c</fullName>
        <label>Marketing Approval</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Marketing_Approver__c</fullName>
        <label>Marketing Approver</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Marketing_Notes__c</fullName>
        <label>Marketing Notes</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Marketing_Price__c</fullName>
        <label>Proposed Sell Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Net_Price__c</fullName>
        <label>Net Price</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Net_Sales__c</fullName>
        <label>Net Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Price_Effective_Date__c</fullName>
        <label>Price Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phoenix_Profit__c</fullName>
        <label>Profit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Proposed_52wk__c</fullName>
        <label>Proposed 52wk</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_Proposed_Monthly__c</fullName>
        <label>Proposed Monthly</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_Proposed_Share__c</fullName>
        <label>Proposed Share %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_RM_Dollor__c</fullName>
        <label>RM $</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_RM_Percent__c</fullName>
        <label>RM %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_Retail_Dollor__c</fullName>
        <label>Retail $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_SB_Retail_Price__c</fullName>
        <label>SB Retail Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Sales_Notes__c</fullName>
        <label>Sales Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Phoenix_Sales_Price__c</fullName>
        <label>Sales Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Sell_Price_Change__c</fullName>
        <label>Sell Price % Change</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_Sell_Price_Per_Size__c</fullName>
        <label>Sell Price Per Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Supply_Effective_Date__c</fullName>
        <label>Supply Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phoenix_Supply_Type__c</fullName>
        <label>Supply Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pipe Fill</fullName>
                </value>
                <value>
                    <fullName>Flow Behind</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_TPT_Dollor_per_pack__c</fullName>
        <label>TPT $ per pack</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_TPT_per_pack__c</fullName>
        <label>TPT % per pack</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Total_TPT__c</fullName>
        <label>Total TPT $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Total_Units__c</fullName>
        <label>Total Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Bid Line Item Price History</label>
    <nameField>
        <label>Bid Line Item Price History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bid Line Item Price History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>